<resources>
    <string name="app_name">OVH Mail Redirections</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">OVH domain and keys</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="application_key">Application key</string>
    <string name="secret_application_key">Secret application key</string>
    <string name="consumer_key">Consumer key</string>
    <string name="domain">Domain</string>
    <string name="endpoint">OVH endpoint</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
